# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_build:python.bzl", "pw_py_library", "pw_py_test")

pw_py_library(
    name = "pw_bluetooth_sapphire",
    srcs = [
        "pw_bluetooth_sapphire/__init__.py",
        "pw_bluetooth_sapphire/fuchsia_utils.py",
    ],
    data = [
        "pw_bluetooth_sapphire/py.typed",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_bluetooth/py:pw_bluetooth",
        "//pw_build/py:pw_build",
        "//pw_cli/py:pw_cli",
    ],
)

pw_py_test(
    name = "fuchsia_utils_test",
    srcs = [
        "tests/fuchsia_utils_test.py",
    ],
    imports = ["."],
    main = "tests/fuchsia_utils_test.py",
    deps = [
        ":pw_bluetooth_sapphire",
    ],
)
