# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_proc_macro", "rust_test")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")

rust_proc_macro(
    name = "pw_boot_macros",
    srcs = [
        "pw_boot_macros.rs",
    ],
    edition = "2021",
    visibility = ["//visibility:private"],
    deps = [
        "@rust_crates//:proc-macro2",
        "@rust_crates//:quote",
        "@rust_crates//:syn",
    ],
)

rust_library(
    name = "pw_boot",
    srcs = [
        "lib.rs",
    ],
    edition = "2021",
    proc_macro_deps = [
        ":pw_boot_macros",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "pw_boot_macros_test",
    crate = ":pw_boot_macros",
    edition = "2021",
    target_compatible_with = incompatible_with_mcu(),
)
